css/original.css
/*
* RegistrationHacks Style File
* http://bit.ly/1ywfhq7
*/
*= require animate
/* Open Sans Google Font */
@import url(https://fonts.googleapis.com/css?family=Open+Sans:600,700);


/* Montserrat Google Font */
@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);

/*
 * Primary Blue: #44D5FF;
 * Dark Blue: #0F2C34;
 * Primary Pink: #FF7FA8;
 */

h1{
  font-family: 'cambria';
}

* {
  font-family: 'Open Sans';
  font-weight: 600;
}

body {
}

section {
  overflow-x:hidden;
}

/*
 * Trust Badge
 */

#mlh-trust-badge {
  display: block;
  max-width: 100px;
  min-width: 60px;
  position: fixed;
  right: 50px;
  top: 0;
  width: 10%;
  z-index: 10000;
}

/*
 * Hero Section
 */

/* #Viz{
    position:absolute;
} */

.hero {
  min-height: 110vh;
  position:relative;
  background-image: url("../images/honey-comb-larger.png");
  background-repeat: no-repeat;
  background-position: center top;
}

.hero hr {
  margin: 0;
  position: relative;
  top: -14px;
}


.hero .wrapper h1 {
  display: inline-block;
  padding-left: 10px 30px;
  padding-right: 10px 30px;
}

.hero .wrapper h2 {
  font-size: 28px;
  font-weight: 200;
}

.hero .wrapper h3 {
  font-size: 20px;
  font-weight: 200;
  padding-bottom: 35px;
}

#lab_social_icon_header a {
  color: #0F2C34;
}

#lab_social_icon_header .social:hover {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -o-transform: scale(1.1);
}

#lab_social_icon_header .social {
  -webkit-transform: scale(0.8);
  /* Browser Variations: */

  -moz-transform: scale(0.8);
  -o-transform: scale(0.8);
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
}
/*
    Multicoloured Hover Variations
*/

#lab_social_icon_header #social-fb:hover {
  color: #3B5998;
}

#lab_social_icon_header #social-tw:hover {
  color: #4099FF;
}

#lab_social_icon_header #social-in:hover {
  color: #cd486b;
}

#lab_social_icon_header #social-em:hover {
  color: #D099D5;
}

.hero .buttons {
  margin: 40px 0;
}


.hero .buttons a {
  background: #fff;
  border: 5px solid #0F2C34;
  border-radius: 40px;
  color: #0F2C34;
  display: inline;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 700;
  padding: 10px 70px;
  text-decoration: none;
  text-transform: uppercase;
}

.hero .buttons a:hover,
.hero .buttons a:focus {
  background-color: #C3BDF1;
  color: #fff;
  transition: all 0.2s ease;
}

.hero .buttons a:not(:last-child) {
  margin-right: 10px;
}


.hero .logo {
   position:relative;
   display: inline-block;
   background-image: url("../images/Capture.PNG");
   background-repeat:no-repeat;
   background-size: 100%;
   margin-top: 500px;
   width: 400px; max-width: 400px;
   height: 250px; max-height: 250px;
   -webkit-transition: background 300ms ease-in 2s; /* property duration timing-function delay */
    -moz-transition: background 300ms ease-in 2s;
    -o-transition: background 300ms ease-in 2s;
    transition: background 300ms ease-in 2s;


    -webkit-transition-property: background;
    -webkit-transition-duration: 300ms;
    -webkit-transition-timing-function: ease-in;
    -webkit-transition-delay: 100ms;

    -moz-transition-property: background;
    -moz-transition-duration: 300ms;
    -moz-transition-timing-function: ease-in;
    -moz-transition-delay: 100ms;

    -o-transition-property: background;
    -o-transition-duration: 300ms;
    -o-transition-timing-function: ease-in;
    -o-transition-delay: 100ms;

    transition-property: background;
    transition-duration: 300ms;
    transition-timing-function: ease-in;
    transition-delay: 100ms;
}

/* .hero .logo:hover {
    background-image: url("../images/Capture3.PNG");
} */

.logotext {
  font-family:'IBM Plex Sans Condensed', sans-serif;
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid black; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  letter-spacing: .15em; /* Adjust as needed */
  animation:
    typing 6s steps(40, end),
    blink-caret .75s step-end infinite;
}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: orange; }
}
/*
 * About Section
 */
/*
.about {
  border-width: 15px 0;
  background-color: #C7E3F0;
  padding: 100px 0;
  position: relative;
}*/

.about {
  border-width: 15px 0;
  background-color: white;
  padding: 100px 0;
  position: relative;
  overflow-x:hidden: hidden;
  white-space: nowrap;
}

.about-section{
  position:absolute;
  top:50%;
}
.about-section p {
  padding:10px;
  width:70%;
  height:auto;
  color: #0F2C34;
  background: #EBF9F3;
  font-weight: 600;
  font-size: 22px;
  line-height: 1.6em;
  letter-spacing: -.3px;
  -webkit-box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  -moz-box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  box-shadow: 10px 10px 5px 0px rgba(197,212,206,1);
  white-space: normal;
}


.about-section p span {
  font-weight: 700;
  text-transform: uppercase;
}

/*
 * Sponsors Section
 */

.sponsors {
  background-color: #fff;
  margin-top: 15px;
  padding: 30px 0;
  position: relative;
}

.sponsors h1 {
  font-family: 'Montserrat';
  font-weight: 700;
  margin: 20px 0;
}

.sponsors p {
  color: #0F2C34;
  font-weight: 600;
  font-size: 22px;
  line-height: 1.6em;
  letter-spacing: -.3px;
}

/*
 * Meet the Team
 */

.team {
  overflow: hidden;
  background-color: #fff;
  margin-top: 15px;
  padding: 30px 0;
  position: relative;
}

.team h1 {
  font-family: 'Montserrat';
  font-weight: 700;
  margin: 20px 0;
}

.border{
  display: block;
  margin: auto;
  width: 160px;
  height: 3px;
  background: #000000;
  margin-bottom: 40px;
}
.ps{
  margin-bottom: 40px;
}

.ps img{
  display: inline-block;
  margin: 0 30px;
  overflow: hidden;
  width: 160px;
  height: 160px;
  background: #fff;
}

a {
  color:inherit;
}

/* Four columns side by side */
.column {
    float: left;
    width: 24%;
    margin-left: 10px;
    margin-bottom: 16px;
    padding: 0 8px;
    text-align: center;
}

/* Display the columns below each other instead of side by side on small screens */
@media screen and (max-width: 650px) {
    .column {
        width: 100%;
        display: block;
    }
}

/* Add some shadows to create a card effect */
.card {
    background: #fff;
    min-width: 200px;
}

/* Some left and right padding inside the container */
.container {
    padding: 0 16px;
}

/* Clear floats */
.container::after, .row::after {
    content: "";
    clear: both;
    display: table;
}
h2.name{
  word-wrap: break-word;
  font-size: 1.5em;
}
.position {
    font-size: 1em;
}


/*
 * FAQ Section
 */

.faq {
  background-color: #fff;
  margin-top: 15px;
  padding: 100px 0;
  position: relative;
}

.faq h1 {
  font-family: 'Montserrat';
  font-weight: 700;
  margin: 30px 0;
}

.faq .question h2 {
  font-family: 'Montserrat';
  font-weight: 700;
  font-size: 24px;
}

.faq .question hr {
  border-top: 8px solid #0F2C34;
  margin: 20px 0;
  width: 80px;
}

.faq .question p {
  font-size: 18px;
  line-height: 1.5em;
}

.faq img {
  margin-bottom: -2px;
  margin-top: 40px;
  width: 300px;
}

p.question{
  text-align: center;
  font-size: 1.5em;

}

/* Style the buttons that are used to open and close the accordion panel */
.accordion {
    background-color: #EBF9F3;
    color: #0F2C34;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .accordion:hover {
    background-color: #C7E3F0;
}

/* Style the accordion panel. Note: hidden by default */
.panel {
    padding: 0 18px;
    background-color: #EBF9F3;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}
.accordion:after {
    content: '\02795'; /* Unicode character for "plus" sign (+) */
    font-size: 13px;
    color: #0F2C34;
    float: right;
    margin-left: 5px;
}

.active:after {
    content: "\2796"; /* Unicode character for "minus" sign (-) */
}
/*
 * Footer Section
 */

.footer {
  background-color: #C3BDF1;
  color: #fff;
  padding: 30px 0;
}

.footer img {
  max-width: 250px;
  margin-bottom: 15px;
}

.footer h3 {
  font-family: 'Montserrat';
  font-size: 16px;
  font-weight: 400;
  line-height: 26px;
  margin: 0;
}

.footer h3 a {
  color: #fff;
}

.icon-container{
  text-align: center;
}

.icon a{
  padding:5px;
  float: right;

}
.icon a:hover{
  color: #0F2C34;
}


@media(max-width: 768px) {
  .hero .buttons a {
    border-width: 8px;
    display: block;
    font-size: 20px;
    margin: 5px;
  }

  .hero img {
    width: 250px;
  }

  .hero hr {
    border-top-width: 8px;
    top: -8px;
  }
}

/*
.rainbow {

background: linear-gradient(130deg, #ecb4bf, #bfffe6, #a7e4ae, #fdf3b8 , #47d1d5 , #8699d1, #fdd6b5, #47d1d5, #e8d2ff);
background-size: 1800% 1800%;

-webkit-animation: rainbow 18s ease infinite;
-z-animation: rainbow 18s ease infinite;
-o-animation: rainbow 18s ease infinite;
  animation: rainbow 18s ease infinite;}

@-webkit-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-moz-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@-o-keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
@keyframes rainbow {
    0%{background-position:0% 82%}
    50%{background-position:100% 19%}
    100%{background-position:0% 82%}
}
Rainbow background */


.hex {
    display: inline-block;
    margin-left: 1px;
    margin-bottom: -29px;
    white-space: nowrap;
    float:none;
    clear:both;
}

.hex:hover {
  cursor: pointer;
}

.hex:hover .top {
  opacity: 0;
  animation-name: fadeOutOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-duration: 0.25s;
}

.hex:hover .middle {
  opacity: 0;
  animation-name: fadeOutOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-duration: 0.25s;
}

.hex:hover .bottom {
  opacity: 0;
  animation-name: fadeOutOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-duration: 0.25s;
}

@keyframes fadeOutOpacity {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.hex .top {
    width: 0;
    border-bottom: 30px solid #C3BDF1;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}
.hex .middle {
    width: 104px;
    height: 60px;
    background: #C3BDF1;
}
.hex .bottom {
    width: 0;
    border-top: 30px solid #C3BDF1;
    border-left: 52px solid transparent;
    border-right: 52px solid transparent;
}
.hex-row {
    clear: left;
}
.hex-row.even {
    margin-left: 53px;
}

